# app/Http/Resources/V1/Permission/PermissionResource.php
@@ -1,34 +1,25 @@
 <?php
 
-namespace App\Http\Resources\V1\Role;
+namespace App\Http\Resources\V1\Permission;
 
-use App\Http\Resources\V1\Permission\PermissionResource;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 use OpenApi\Annotations as OA;
 
 /**
  * @OA\Schema(
- *     schema="RoleResource",
- *     title="Role Resource",
- *     description="Role resource representation",
+ *     schema="PermissionResource",
+ *     title="Permission Resource",
+ *     description="Permission resource representation",
  *
  *     @OA\Property(property="id", type="integer", example=1),
- *     @OA\Property(property="name", type="string", example="Admin"),
+ *     @OA\Property(property="name", type="string", example="create-users"),
  *     @OA\Property(property="guard_name", type="string", example="web"),
- *     @OA\Property(
- *         property="permissions",
- *         type="array",
- *         nullable=true,
- *
- *         @OA\Items(ref="#/components/schemas/PermissionResource"),
- *     ),
- *
  *     @OA\Property(property="created_at", type="datetime", example="2021-01-01 12:00:00", nullable=true),
- *     @OA\Property(property="updated_at", type="datetime", example="2021-01-01 12:00:00", nullable=true),
+ *     @OA\Property(property="updated_at", type="datetime", example="2021-01-01 12:00:00", nullable=true)
  * )
  */
-class RoleResource extends JsonResource
+class PermissionResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -41,9 +32,6 @@ class RoleResource extends JsonResource
             'id' => $this->id,
             'name' => $this->name,
             'guard_name' => $this->guard_name,
-            'permissions' => $this->whenLoaded('permissions', function () {
-                return PermissionResource::collection($this->permissions);
-            }),
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
         ];
